# pagbar

./: Cargo.toml  README.md  TODO.md  example.toml  flake.nix  perf.data  perf.data.old
src/: backend.rs  bar.rs  config.rs  error.rs  glow_shit.rs  layout.rs  main.rs
src/backend/: glow_backend.rs  x11.rs
src/bar/: layout.rs  user_config.rs  widget.rs
src/bar/backend/: mod.rs  x11.rs
