[package]
name = "pagbar"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.22.0"
egui-winit = { version = "0.22.0", default-features = false }
egui-wgpu = { version = "0.22.0", features = ["winit"] }
wgpu = { version = "0.16.1", default-features = false}

clap = { version = "4.3.3", features = ["std", "derive"], default-features = false }
serde = { version = "1.0.164", features = ["derive"], default-features = false }
toml = { features = ["parse"], default-features = false, version = "0.7.4" }
xdg = "2.5.0"
systemstat = "0.2.3"
chrono = { features = ["clock"], default-features = false, version = "0.4.26" }
pollster = "0.3.0"
env_logger = { default-features = false, version = "0.10.0" }
